--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -463,6 +463,23 @@ margin on the iframe, cause it breaks stuff. */
     vertical-align: middle;
 }
 
+/* Title for header on main */
+.vertical-title {
+    display: table-cell;
+    border: 0px;
+    border-spacing: 0px;
+    border-collapse: collapse;
+    vertical-align: bottom;
+    width: 100%;
+    padding: 0 0 120px 0;
+    background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,1) 85%, rgba(0,0,0,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(85%,rgba(0,0,0,1)), color-stop(100%,rgba(0,0,0,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,1) 85%,rgba(0,0,0,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,1) 85%,rgba(0,0,0,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,1) 85%,rgba(0,0,0,1) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,1) 85%,rgba(0,0,0,1) 100%); /* W3C */
+}
+
 
 /* ==========================================================================
    4. General - The main styles for the the theme
@@ -472,6 +489,9 @@ margin on the iframe, cause it breaks stuff. */
 .main-header {
     position: relative;
     display: table;
+    border: 0px;
+    border-spacing: 0px;
+    border-collapse: collapse;
     width: 100%;
     height: 100%;
     margin-bottom: 5rem;
