--- a/default.hbs
+++ b/default.hbs
@@ -18,8 +18,13 @@
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
 
+    <link rel="stylesheet" href="{{asset "css/zenburn.css"}}">
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/highlight.min.js"></script>
+
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
+
+    <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body class="{{body_class}}">
 
