--- a/default.hbs
+++ b/default.hbs
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="{{asset "css/zenburn.css"}}">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/highlight.min.js"></script>
 
+    <link rel="stylesheet" type="text/css" href="{{asset "css/font-awesome.min.css"}}" />
+
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
 
