--- a/default.hbs
+++ b/default.hbs
@@ -16,7 +16,7 @@
 
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
+    <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Open+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css' />
 
     <link rel="stylesheet" href="{{asset "css/zenburn.css"}}">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/highlight.min.js"></script>
