--- a/index.hbs
+++ b/index.hbs
@@ -11,13 +11,14 @@
         <div class="main-header-content inner">
             <h1 class="page-title">{{@blog.title}}</h1>
             <h2 class="page-description">{{@blog.description}}</h2>
+            <h4 class="author-description page-description">Андрей Фадеев</h4>
             <h3 class="links">
-                <span class="fa-stack fa-lg">
+                <!-- <span class="fa-stack fa-lg">
                     <abbr title="CV"><a href="#">
                         <i class="fa fa-circle fa-stack-2x"></i>
                         <i class="fa fa-file-text-o fa-stack-1x fa-inverse"></i>
                     </a></abbr>
-                </span>
+                </span> -->
                 <span class="fa-stack fa-lg">
                     <abbr title="Блэкаут!"><a href="http://blackout.today/">
                         <i class="fa fa-circle fa-stack-2x"></i>
