Typos and Twitter cards and OG tweaks

--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -2,7 +2,7 @@
     {{#if prev}}
         <a class="newer-posts" href="{{page_url prev}}">&larr; Новее</a>
     {{/if}}
-    <span class="page-number">Старница {{page}} из {{pages}}</span>
+    <span class="page-number">Страница {{page}} из {{pages}}</span>
     {{#if next}}
         <a class="older-posts" href="{{page_url next}}">Старые &rarr;</a>
     {{/if}}
