--- a/default.hbs
+++ b/default.hbs
@@ -19,13 +19,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@andrewf">
     <meta name="twitter:title" content="{{meta_title}}">
-    <meta name="twitter:description" content="{{meta_description}}. {{#post}}{{excerpt words="26"}}{{/post}}">
+    <meta name="twitter:description" content="{{meta_description}} {{#post}}{{excerpt words="26"}}{{/post}}">
     {{#if post.image}}<meta name="twitter:image:src" content="{{@blog.url}}{{post.image}}">
     {{else}}<meta name="twitter:image:src" content="{{@blog.url}}{{@blog.cover}}">{{/if}}
 
     <meta property="og:type" content="article">
     <meta property="og:title" content="{{meta_title}}">
-    <meta property="og:description" content="{{meta_description}}. {{#post}}{{excerpt words="26"}}{{/post}}">
+    <meta property="og:description" content="{{meta_description}} {{#post}}{{excerpt words="26"}}{{/post}}">
     {{#if post.image}}<meta property="og:image" content="{{@blog.url}}{{post.image}}">
     {{else}}<meta property="og:image" content="{{@blog.url}}{{@blog.cover}}">{{/if}}
 
